--- a/frontend/src/components/UserDashboard/UserDashboard.css
+++ b/frontend/src/components/UserDashboard/UserDashboard.css
@@ -31,7 +31,7 @@ h4 {
 
 #dashboard-container {
     position: relative;
-    z-index: -1;
+    z-index: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,7 +43,6 @@ h4 {
     height: 300px;
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
     border-radius: 10px;
-    /* background-color: blue; */
 }
 
 #notes-header {
@@ -57,7 +56,7 @@ h4 {
     font-weight: bold;
 }
 
-#notes-header > i {
+#notes-header > a {
     font-size: 20px;
     margin: 10px 15px 0 0;
 }
